# Open_Duck_Playground

./: .gitignore  README.md  ROSE5720_Report_Completed.docx  generate_report.py  generate_report2.py  generate_report3.py  pyproject.toml
Open_Duck_Mini/: .gitignore  README.md  thanks.md
Open_Duck_Mini/docs/: assembly_guide.md  configure_motors.md  open_duck_mini_v2_wiring_diagram.drawio  print_guide.md  sim2real.md
Open_Duck_Mini/experiments/: README.md
Open_Duck_Mini/print/: battery_pack_lid.stl  body_back.stl  body_front.stl  body_middle_bottom.stl  body_middle_top.stl  bulb.stl  flash_light_module.stl  flash_reflector_interface.stl  foot_bottom_pla.stl  foot_bottom_tpu.stl  foot_side.stl  foot_top.stl  head.stl  head_bot_sheet.stl  head_pitch_to_yaw.stl  head_roll_mount.stl  left_eye.stl  (+19 more)
Open_Duck_Mini_Runtime/: .gitignore  README.md  TODO.md  checklist.md  example_config.json  setup.cfg
Open_Duck_Mini_Runtime/mini_bdx_runtime/mini_bdx_runtime/: __init__.py  antennas.py  buttons.py  camera.py  duck_config.py  eyes.py  feet_contacts.py  imu.py  onnx_infer.py  poly_reference_motion.py  projector.py  raw_imu.py  rl_utils.py  rustypot_position_hwi.py  sounds.py  xbox_controller.py
Open_Duck_Mini_Runtime/scripts/: antennas_controller_test.py  calibrate_imu.py  cam_test.py  check_motors.py  check_voltage.py  configure_all_motors.py  configure_motor.py  fc_test.py  find_soft_offsets.py  head_puppet.py  imu_client.py  imu_server.py  new_record_data.py  plot_recorded_data.py  polynomial_coefficients.pkl  record_data.py  turn_off.py  turn_on.py  v2_rl_walk_mujoco.py
(+158 files in other folders)
