[metadata]
name = mini-bdx-runtime
version = 0.0.1
author = Antoine Pirrone
author_email = antoine.pirrone@gmail.com
url = https://github.com/apirrone/mini_BDX_runtime
description = Runtime code for mini BDX
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =mini_bdx_runtime
install_requires =
    rustypot==0.1.0
    onnxruntime==1.18.1
    numpy==1.26.4
    adafruit-circuitpython-bno055==5.4.13
    scipy==1.15.1
    pygame==2.6.0
    pypot @ git+https://github.com/pollen-robotics/pypot@support-feetech-sts3215
    openai==1.70.0

    # adafruit_extended_bus
    
[options.packages.find]
where=mini_bdx_runtime

[options.package_data]

[options.extras_require]

[options.entry_points]
console_scripts =
